# AIStack

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.selection-ui  README.md  docker-compose.selection-ui.yml  docker-compose.yml  import_knowledge_artifacts.sh  pyproject.toml  run_render_demo.sh  run_selection_ui.sh
catalog_engine/providers/: filesystem.py
context/: AI_PROTOCOL.md  AI_TRANSACTION_PROTOCOL.md  README_AI.md
docs/00-foundation/: Constitution.md  FDN-0001-Constitution.md  FDN-0001-README.md  FDN-0002-Glossary.md  FDN-0003-Constitution.md  FDN-0004-Governed-Heritage.md  FDN-0005-Project-Operating-Model.md  FDN-0006-Project-Workspace-Operating-Model.md  FDN-0007-Governed-Engineering-Cycle.md  FDN-0008-Self-Application-Principle.md  Glossary.md  Governed-Heritage.md  Project-Operating-Model.md  README.md  The-Sustainable-Heritage-Manifesto.md  engineering-principles-additions.md
docs/02-standards/: STD-0001-README.md
docs/04-development/: DEVELOPMENT-GUIDELINES.md
docs/99-meta/: NEXT-SESSION-TODO.md  PROJECT-CONTEXT.md
examples/: README.md
examples/catalog_engine/: demo-directory-catalog.yml  filesystem_catalog_demo.py  music_catalog_from_filesystem.py
examples/generation_engine/: generate_music_android_folder.py
examples/generators/: generate_music_android_folder.py
examples/render_engine/: render_demo.py
scripts/: dev-env.sh  export_and_push_project_sources.sh  export_project_sources.py  repository_inventory.sh  sync_mirrors.sh
selection_engine/: yaml_store.py
selection_ui/: app.py
tools/: qualification_runner.py
(+351 files in other folders)
