[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aistack"
version = "0.1.0"
description = "AIStack Knowledge Operating System"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Fabrice Persiaut" }
]

license = { text = "To be defined" }

[project.scripts]
aistack = "aistack.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
